[package]
name = "frankenterm-core"
description = "Core library for FrankenTerm - swarm-native terminal platform for AI agent fleets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "frankenterm", "automation", "ai-agents"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Pattern matching
aho-corasick.workspace = true
memchr.workspace = true
fancy-regex.workspace = true
regex.workspace = true
bloomfilter.workspace = true

# Approval tokens and plan hashing
rand.workspace = true
sha2.workspace = true
hex = "0.4"

# Database
rusqlite.workspace = true

# Config
toml.workspace = true
serde_yaml.workspace = true

# Directory paths
dirs = "6.0.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# File locking
fs2.workspace = true

base64 = "0.22.1"
crossbeam.workspace = true

# FrankenTerm crates (optional, in-tree ex-WezTerm)
codec = { workspace = true, optional = true }
config = { workspace = true, optional = true }
mux = { workspace = true, optional = true }
frankenterm-term = { workspace = true, optional = true }

# TUI (optional, behind feature)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# FrankenTUI (optional, migration target — see docs/adr/)
ftui = { workspace = true, optional = true }

# MCP server (optional, behind feature)
fastmcp = { workspace = true, optional = true }
toon_rust = { workspace = true, optional = true }
# Web server (optional, behind feature)
fastapi = { workspace = true, optional = true }
fastapi-core = { workspace = true, optional = true }
# Sync (optional, behind feature)
asupersync = { workspace = true, optional = true }
# Distributed mode (optional, behind feature)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
# Lexical search (optional, behind feature)
tantivy = { workspace = true, optional = true }

# Semantic search (optional, behind feature)
tokenizers = { version = "0.21", optional = true }
safetensors = { version = "0.5", optional = true }
half = { version = "2.4", optional = true, features = ["num-traits"] }
fastembed = { version = "4", optional = true }
rmp-serde = { version = "1.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.8.0"
tempfile = "3.23.0"
criterion = { version = "0.7.0", features = ["async_tokio"] }
loom = "0.7"

# Benchmarks
[[bench]]
name = "pattern_detection"
harness = false

[[bench]]
name = "delta_extraction"
harness = false

[[bench]]
name = "fts_query"
harness = false

[[bench]]
name = "watcher_loop"
harness = false

[[bench]]
name = "cx_creation"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "cx_propagation"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "sizing_benchmark"
harness = false

[[bench]]
name = "storage_regression"
harness = false

[[bench]]
name = "backpressure_performance"
harness = false

[[bench]]
name = "caut_quota_scheduling"
harness = false

[[bench]]
name = "cache_gc"
harness = false

[[bench]]
name = "tui_rendering"
harness = false
required-features = ["ftui"]

[[bench]]
name = "topology_serialization"
harness = false

[[bench]]
name = "snapshot_engine"
harness = false

[[bench]]
name = "pool_benchmark"
harness = false

[[bench]]
name = "pdu_pipelining"
harness = false
required-features = ["vendored"]

[[bench]]
name = "compression_bypass"
harness = false
required-features = ["vendored"]

[[bench]]
name = "shard_routing"
harness = false

[[bench]]
name = "bocpd"
harness = false

[[bench]]
name = "causal_dag"
harness = false

[[bench]]
name = "kalman_watchdog"
harness = false

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "scrollback_eviction"
harness = false

[[bench]]
name = "outcome_vs_result"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "differential_snapshot"
harness = false

[[bench]]
name = "auto_tuning"
harness = false

[[bench]]
name = "labruntime_overhead"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "outcome_adapter"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "spike_comparison"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "lockfree_contention"
harness = false

[[bench]]
name = "spsc_ring_buffer"
harness = false

[[bench]]
name = "subscription_streaming"
harness = false
required-features = ["streaming"]

[[bench]]
name = "tantivy_search"
harness = false

[[bench]]
name = "semantic_compression"
harness = false

[[bench]]
name = "irl_bench"
harness = false

[[bench]]
name = "native_events_latency"
harness = false
required-features = ["native-wezterm"]

[features]
default = []
# Public feature flags (stable surface)
frankenterm = ["frankenterm-deps"]
vendored = ["frankenterm"]  # backward compat alias
browser = ["browser-automation"]
mcp = ["mcp-server"]
web = ["dep:fastapi", "dep:fastapi-core", "dep:asupersync"]
streaming = ["web"]
tui = ["dep:ratatui", "dep:crossterm"]
ftui = ["dep:ftui"]
rollout = ["tui", "ftui"]
metrics = []
native-wezterm = []
distributed = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:x509-parser",
]
sync = ["dep:asupersync"]
asupersync-runtime = ["dep:asupersync"]
recorder-lexical = ["dep:tantivy"]
semantic-search = ["dep:tokenizers", "dep:safetensors", "dep:half", "dep:fastembed", "dep:rmp-serde"]

# Optional heavy integrations - feature-gated (internal)
frankenterm-deps = ["dep:codec", "dep:config", "dep:mux", "dep:frankenterm-term"]
vendored-wezterm = ["frankenterm-deps"]  # backward compat alias
browser-automation = []
mcp-server = ["dep:fastmcp", "dep:toon_rust"]
