[package]
name = "frankenterm-core"
description = "Core library for FrankenTerm - swarm-native terminal platform for AI agent fleets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "frankenterm", "automation", "ai-agents"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true

# Pattern matching
aho-corasick.workspace = true
memchr.workspace = true
fancy-regex.workspace = true
regex.workspace = true
bloomfilter.workspace = true

# Approval tokens and plan hashing
rand.workspace = true
sha2.workspace = true
hex = "0.4"

# Database
rusqlite.workspace = true

# Config
toml.workspace = true
serde_yaml.workspace = true

# Directory paths
dirs = "6.0.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# File locking
fs2.workspace = true

base64 = "0.22.1"
crossbeam.workspace = true

# FrankenTerm crates (optional, in-tree ex-WezTerm)
codec = { workspace = true, optional = true }
config = { workspace = true, optional = true }
mux = { workspace = true, optional = true }
frankenterm-term = { workspace = true, optional = true }

# TUI (optional, behind feature)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# FrankenTUI (optional, migration target — see docs/adr/)
ftui = { workspace = true, optional = true }
ftui-core = { path = "../../../frankentui/crates/ftui-core", optional = true }
ftui-render = { path = "../../../frankentui/crates/ftui-render", optional = true }
ftui-layout = { path = "../../../frankentui/crates/ftui-layout", optional = true }
ftui-style = { path = "../../../frankentui/crates/ftui-style", optional = true }
ftui-widgets = { path = "../../../frankentui/crates/ftui-widgets", optional = true }
ftui-runtime = { path = "../../../frankentui/crates/ftui-runtime", optional = true }
ftui-backend = { path = "../../../frankentui/crates/ftui-backend", optional = true }

# MCP server (optional, behind feature)
fastmcp = { workspace = true, optional = true }
toon_rust = { workspace = true, optional = true }
# Web server (optional, behind feature)
fastapi = { workspace = true, optional = true }
# Sync (optional, behind feature)
asupersync = { workspace = true, optional = true, features = ["tls"] }
# Distributed mode (optional, behind feature)
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
# Lexical search (optional, behind feature)
tantivy = { workspace = true, optional = true }
nix = { workspace = true, optional = true, features = ["fs"] }
# FrankenSearch integration (optional, behind feature)
frankensearch = { workspace = true, optional = true }
# Agent detection integration (optional, behind feature)
franken-agent-detection = { workspace = true, optional = true }
# FrankenRedis session integration (optional, behind feature)
# Pin exact crate versions while sourcing code from the sibling source-of-truth repo.
fr-store = { version = "=0.1.0", path = "../../../frankenredis/crates/fr-store", optional = true }
fr-protocol = { version = "=0.1.0", path = "../../../frankenredis/crates/fr-protocol", optional = true }
fr-config = { version = "=0.1.0", path = "../../../frankenredis/crates/fr-config", optional = true }
fr-expire = { version = "=0.1.0", path = "../../../frankenredis/crates/fr-expire", optional = true }
fr-persist = { version = "=0.1.0", path = "../../../frankenredis/crates/fr-persist", optional = true }

# Semantic search (optional, behind feature)
tokenizers = { version = "0.21", optional = true }
safetensors = { version = "0.5", optional = true }
half = { version = "2.4", optional = true, features = ["num-traits"] }
fastembed = { version = "4", optional = true }
rmp-serde = { version = "1.3", optional = true }

[dev-dependencies]

tokio = { workspace = true, features = ["test-util"] }
proptest = "1.8.0"
tempfile = "3.23.0"
criterion = { version = "0.7.0", features = ["async_tokio"] }
loom = "0.7"

# Benchmarks
[[bench]]
name = "pattern_detection"
harness = false

[[bench]]
name = "delta_extraction"
harness = false

[[bench]]
name = "fts_query"
harness = false

[[bench]]
name = "watcher_loop"
harness = false

[[bench]]
name = "cx_creation"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "cx_propagation"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "task_spawn"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "sizing_benchmark"
harness = false

[[bench]]
name = "storage_regression"
harness = false

[[bench]]
name = "backpressure_performance"
harness = false

[[bench]]
name = "caut_quota_scheduling"
harness = false

[[bench]]
name = "cache_gc"
harness = false

[[bench]]
name = "tui_rendering"
harness = false
required-features = ["ftui"]

[[bench]]
name = "topology_serialization"
harness = false

[[bench]]
name = "snapshot_engine"
harness = false

[[bench]]
name = "restart_scheduling"
harness = false

[[bench]]
name = "pool_benchmark"
harness = false

[[bench]]
name = "mux_pool_scaling"
harness = false
required-features = ["vendored"]

[[bench]]
name = "pdu_pipelining"
harness = false
required-features = ["vendored"]

[[bench]]
name = "compression_bypass"
harness = false
required-features = ["vendored"]

[[bench]]
name = "shard_routing"
harness = false

[[bench]]
name = "bocpd"
harness = false

[[bench]]
name = "simd_scan"
harness = false

[[bench]]
name = "causal_dag"
harness = false

[[bench]]
name = "kalman_watchdog"
harness = false

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "scrollback_eviction"
harness = false

[[bench]]
name = "outcome_vs_result"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "differential_snapshot"
harness = false

[[bench]]
name = "auto_tuning"
harness = false

[[bench]]
name = "labruntime_overhead"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "outcome_adapter"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "spike_comparison"
harness = false
required-features = ["asupersync-runtime"]

[[bench]]
name = "lockfree_contention"
harness = false

[[bench]]
name = "spsc_ring_buffer"
harness = false

[[bench]]
name = "fork_hardening_benchmarks"
harness = false

[[bench]]
name = "subscription_streaming"
harness = false
required-features = ["streaming"]

[[bench]]
name = "tantivy_search"
harness = false
required-features = ["recorder-lexical"]

[[bench]]
name = "semantic_compression"
harness = false

[[bench]]
name = "irl_bench"
harness = false

[[bench]]
name = "native_events_latency"
harness = false
required-features = ["native-wezterm"]

[[bench]]
name = "ipc_throughput"
harness = false

[[bench]]
name = "fork_hardening"
harness = false

[[bench]]
name = "wal_throughput"
harness = false

[[test]]
name = "proptest_daemon"
path = "tests/proptest_daemon.rs"
required-features = ["semantic-search"]

[[test]]
name = "proptest_casr_types"
path = "tests/proptest_casr_types.rs"
required-features = ["session-resume"]

[[test]]
name = "proptest_session_resume"
path = "tests/proptest_session_resume.rs"
required-features = ["session-resume"]

[[test]]
name = "proptest_disk_pressure"
path = "tests/proptest_disk_pressure.rs"
required-features = ["disk-pressure"]

[[test]]
name = "proptest_recorder_lexical_ingest"
path = "tests/proptest_recorder_lexical_ingest.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_recorder_lexical_schema"
path = "tests/proptest_recorder_lexical_schema.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_search"
path = "tests/proptest_search.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_tantivy_ingest"
path = "tests/proptest_tantivy_ingest.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_tantivy_policy"
path = "tests/proptest_tantivy_policy.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_tantivy_quality"
path = "tests/proptest_tantivy_quality.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_tantivy_query"
path = "tests/proptest_tantivy_query.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "proptest_tantivy_reindex"
path = "tests/proptest_tantivy_reindex.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "recorder_recovery_drills"
path = "tests/recorder_recovery_drills.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "recorder_tantivy_integration"
path = "tests/recorder_tantivy_integration.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "tantivy_integration_tests"
path = "tests/tantivy_integration_tests.rs"
required-features = ["recorder-lexical"]

[[test]]
name = "tantivy_search_integration"
path = "tests/tantivy_search_integration.rs"
required-features = ["recorder-lexical"]

[features]
# Default-on so workspace builds include FrankenSearch + agent-detection integration.
# Use `--no-default-features` to compile without these dependencies.
default = ["agent-detection", "frankensearch"]
# Public feature flags (stable surface)
frankenterm = ["frankenterm-deps"]
vendored = ["frankenterm"]  # backward compat alias
browser = ["browser-automation"]
mcp = ["mcp-server"]
web = ["dep:fastapi", "dep:asupersync"]
streaming = ["web"]
tui = ["dep:ratatui", "dep:crossterm"]
ftui = ["dep:ftui"]
tui-widgets = ["dep:ftui-render", "dep:ftui-layout", "dep:ftui-style", "dep:ftui-widgets"]
tui-dashboard = ["tui-widgets", "dep:ftui-runtime", "dep:ftui-core", "dep:ftui-backend"]
rollout = ["tui", "ftui"]
metrics = []
native-wezterm = []
distributed = [
    "dep:asupersync",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:x509-parser",
]
sync = ["dep:asupersync"]
asupersync-runtime = ["dep:asupersync"]
recorder-lexical = ["dep:tantivy"]
disk-pressure = ["dep:nix"]
semantic-search = ["dep:tokenizers", "dep:safetensors", "dep:half", "dep:fastembed", "dep:rmp-serde"]
# Feature gate for FrankenSearch integration.
frankensearch = ["dep:frankensearch"]
# Feature gate for filesystem-based coding-agent installation probes.
agent-detection = ["dep:franken-agent-detection"]
# Feature gate for FrankenRedis-backed session state primitives.
redis-session = [
    "dep:fr-store",
    "dep:fr-protocol",
    "dep:fr-config",
    "dep:fr-expire",
    "dep:fr-persist",
]
# Feature gate for cross_agent_session_resumer integration (vendored IR types).
session-resume = []
# Feature gate for generic subprocess bridge foundation.
subprocess-bridge = []
# Feature gate for mcp_agent_mail_rust coordination bridge.
agent-mail = ["subprocess-bridge"]
# Feature gate for vibe_cockpit telemetry export bridge.
vc-export = ["subprocess-bridge"]

# Optional heavy integrations - feature-gated (internal)
frankenterm-deps = ["dep:codec", "dep:config", "dep:mux", "dep:frankenterm-term"]
vendored-wezterm = ["frankenterm-deps"]  # backward compat alias
browser-automation = []
mcp-server = ["dep:fastmcp", "dep:toon_rust"]
