[package]
name = "frankenterm-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "FrankenTerm GUI — custom terminal emulator binary"
publish = false
build = "build.rs"

[[bin]]
name = "frankenterm-gui"
path = "src/main.rs"

[features]
default = []
wayland = ["window/wayland"]

[build-dependencies]
anyhow.workspace = true

[dependencies]
# Core library — shared types, config, storage, patterns, policy engine
frankenterm-core.workspace = true

# Vendored FrankenTerm crates (ex-WezTerm)
codec.workspace = true
config.workspace = true
env-bootstrap.workspace = true
filedescriptor.workspace = true
frecency.workspace = true
lfucache.workspace = true
luahelper.workspace = true
mux.workspace = true
mux-lua.workspace = true
portable-pty = { workspace = true, features = ["serde_support"] }
promise.workspace = true
rangeset.workspace = true
ratelim.workspace = true
tabout.workspace = true
termwiz-funcs.workspace = true
termwiz.workspace = true
umask.workspace = true
url-funcs.workspace = true
wezterm-bidi.workspace = true
wezterm-blob-leases = { workspace = true, features = ["simple_tempdir"] }
wezterm-client.workspace = true
wezterm-dynamic.workspace = true
wezterm-font.workspace = true
wezterm-mux-server-impl.workspace = true
wezterm-open-url.workspace = true
wezterm-ssh.workspace = true
wezterm-term = { workspace = true, features = ["use_serde"] }
wezterm-toast-notification.workspace = true
window-funcs.workspace = true
window.workspace = true
wezterm-gui-subcommands.workspace = true

# Standard dependencies
anyhow.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
chrono.workspace = true
clap.workspace = true
colorgrad.workspace = true
dirs-next.workspace = true
downcast-rs.workspace = true
emojis.workspace = true
euclid.workspace = true
fastrand.workspace = true
finl_unicode.workspace = true
futures.workspace = true
hdrhistogram.workspace = true
http_req.workspace = true
image.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
metrics.workspace = true
mlua = { workspace = true, features = ["send", "serialize"] }
nucleo-matcher.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
serde_json.workspace = true
shlex.workspace = true
smol.workspace = true
tempfile.workspace = true
terminfo.workspace = true
textwrap.workspace = true
thiserror.workspace = true
tiny-skia.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
url.workspace = true
walkdir.workspace = true
wgpu.workspace = true

[target.'cfg(windows)'.dependencies]
shared_library.workspace = true
winapi = { workspace = true, features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
    "winsock2",
]}
windows = { workspace = true, features = [
    "Win32_UI_Shell",
]}

# NOTE: Workspace lints intentionally omitted — vendored GUI code carries
# upstream style that doesn't conform to our pedantic clippy profile.
# Linting will be incrementally enabled as the code is FrankenTerm-ified.
