[package]
name = "frankenterm-mux-server"
description = "FrankenTerm headless mux server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "frankenterm-mux-server"
path = "src/main.rs"

[features]
default = ["jemalloc"]
jemalloc = ["dep:frankenterm-alloc", "frankenterm-alloc/jemalloc"]

[dependencies]
anyhow.workspace = true
async_ossl = { workspace = true, default-features = false, features = ["async-io"] }
clap.workspace = true
config.workspace = true
frankenterm-alloc = { workspace = true, optional = true }
libc.workspace = true
log.workspace = true
mux.workspace = true
mlua.workspace = true
openssl.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
umask.workspace = true
wezterm-blob-leases = {workspace=true, features=["simple_tempdir"]}
frankenterm-mux-server-impl.workspace = true
wezterm-gui-subcommands.workspace = true
wezterm-term.workspace = true

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}

# Uses workspace lints but allows unsafe_code for set_var/remove_var at startup.
[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "allow"
