[package]
name = "frankenterm"
description = "FrankenTerm CLI - swarm-native terminal platform for AI agent fleets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "frankenterm", "automation", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ft"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
frankenterm-core = { workspace = true, default-features = false }
frankenterm-alloc = { workspace = true, optional = true }
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true


anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fancy-regex.workspace = true
toml.workspace = true
toml_edit.workspace = true
toon_rust.workspace = true
rusqlite.workspace = true
dirs = "6.0.0"
sha2.workspace = true
zip.workspace = true
zstd.workspace = true
asupersync = { workspace = true, features = ["tls"] }

[features]
# Everything is on by default — ft is a standalone terminal platform with no feature gates.
default = [
    "browser",
    "distributed",
    "vendored",
    "jemalloc",
    "mcp",
    "metrics",
    "native-wezterm",
    "rollout",
    "semantic-search",
    "sync",
    "tui",
    "tui-dashboard",
    "tui-widgets",
    "web",
    "redis-session",
    "asupersync-runtime",
]
frankenterm = ["frankenterm-core/frankenterm"]
vendored = ["frankenterm"]  # backward compat alias
browser = ["frankenterm-core/browser"]
mcp = ["frankenterm-core/mcp"]
web = ["frankenterm-core/web"]
tui = ["frankenterm-core/tui"]
ftui = ["frankenterm-core/ftui"]
tui-widgets = ["frankenterm-core/tui-widgets"]
tui-dashboard = ["frankenterm-core/tui-dashboard", "tui-widgets"]
rollout = ["frankenterm-core/rollout", "tui", "ftui"]
metrics = ["frankenterm-core/metrics"]
native-wezterm = ["frankenterm-core/native-wezterm"]
distributed = ["frankenterm-core/distributed"]
sync = ["frankenterm-core/sync"]
asupersync-runtime = ["frankenterm-core/asupersync-runtime"]
semantic-search = ["frankenterm-core/semantic-search"]
redis-session = ["frankenterm-core/redis-session"]
jemalloc = ["dep:frankenterm-alloc", "frankenterm-alloc/jemalloc"]

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.23.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
