[package]
authors = ["Wez Furlong"]
name = "frankenterm-cell"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wezterm/wezterm"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/frankenterm-cell"
keywords = ["terminal", "cell"]
publish = false

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
frankenterm-blob-leases = {workspace = true, optional=true}
frankenterm-char-props.workspace = true
frankenterm-color-types.workspace = true
frankenterm-escape-parser.workspace = true
frankenterm-dynamic.workspace = true

[features]
std = ["serde/std", "frankenterm-char-props/std", "frankenterm-color-types/std", "frankenterm-escape-parser/std", "frankenterm-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "frankenterm-color-types/use_serde"]
use_image = ["dep:image", "dep:frankenterm-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]

