[package]
name = "mux"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lua"]
lua = ["dep:luahelper", "dep:mlua", "config/lua", "procinfo/lua"]
no-lua = ["config/no-lua"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bintree.workspace = true
bitflags.workspace = true
chrono.workspace = true
config = { path = "../config", default-features = false }
crossbeam.workspace = true
downcast-rs.workspace = true
fancy-regex.workspace = true
filedescriptor.workspace = true
finl_unicode.workspace = true
hostname.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
luahelper = { workspace=true, optional = true }
metrics.workspace = true
mlua = { workspace=true, optional = true }
names.workspace = true
nix = {workspace=true, features=["term"]}
parking_lot.workspace = true
percent-encoding.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
procinfo = { path = "../procinfo", default-features = false }
promise.workspace = true
rangeset.workspace = true
serde = {workspace=true, features = ["rc", "derive"]}
serial2.workspace = true
shell-words.workspace = true
smol.workspace = true
terminfo.workspace = true
termwiz.workspace = true
textwrap.workspace = true
thiserror.workspace = true
url.workspace = true
frankenterm-dynamic.workspace = true
frankenterm-ssh.workspace = true
frankenterm-term = { workspace=true, features=["use_serde"] }

[target."cfg(windows)".dependencies]
ntapi.workspace = true
winapi = { workspace=true, features = [
    "handleapi",
    "memoryapi",
    "psapi",
    "processthreadsapi",
    "tlhelp32",
]}

[dev-dependencies]
k9.workspace = true
proptest = "1.8.0"
serde_json.workspace = true
